# polychain_l2

./: .gitignore  BUGS_FIXED.md  CORRECTED_DEMO.md  CRYPTO_RACE_IMPROVEMENTS.md  Cargo.toml  DEMO_DEPLOYMENT.md  FAKE_DATA_FIXED.md  README.md  TEST_README.md  crates.js  dfx.json  help.html  index.html  package-lock.json  package.json  search-index.js  settings.html  src-files.js  test_all_functions.cjs  test_connection.js  test_crypto_race.html  test_frontend_backend.js
.github/: PULL_REQUEST_TEMPLATE.md  dependency-review-config.yml
api/: README.md
frontend/: doc-coverage.md
polychain_l2_backend/: all.html  constant.BITCOIN_VAULT.html  (+147 more)
src/polychain_l2_backend/: Cargo.toml  bitcoin_vault.rs.html  chain.rs.html  crypto.rs.html  errors.rs.html  lib.rs.html  polychain_l2_backend.did  types.rs.html  validation.rs.html
src/polychain_l2_backend/cryptography/: bridge.rs.html  ecdsa.rs.html  falcon.rs.html  mldsa.rs.html  mod.rs.html  schnorr.rs.html
src/polychain_l2_backend/src/: bitcoin_vault.rs  chain.rs  crypto.rs  cryptographybridge.rs  errors.rs  lib.rs  types.rs  validation.rs
src/polychain_l2_backend/src/compression/: algorithms.rs  batch.rs  metrics.rs  mod.rs
src/polychain_l2_backend/src/cryptography/: bridge.rs  ecdsa.rs  falcon.rs  falcon_simple.rs  mldsa.rs  mldsa_simple.rs  mod.rs  schnorr.rs
src/polychain_l2_backend/src/data/: mod.rs  realistic_generator.rs
src/polychain_l2_backend/src/icp_api/: mod.rs
src/polychain_l2_backend/src/multi_chain/: bitcoin_vault.rs  ethereum_vault.rs  icp_vault.rs  mod.rs  solana_vault.rs  unified_vault.rs
(+155 files in other folders)
