[package]
name = "polychain_l2_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
env_logger = "0.11.8"
getrandom = { version = "0.2", features = ["custom"] }
ic-cdk = "0.17"
ic-cdk-timers = "0.11" 
k256 = {version = "0.13.4", features  = ["ecdsa", "schnorr"]}
libc = "0.2"
log = "0.4.27"
fips204 = { version = "0.4.0", default-features = false, features = ["ml-dsa-44"] }
fips205 = { version = "0.4.0", default-features = false, features = ["slh_dsa_sha2_128f"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]  
